# Super_Trunfo_C

./: CMakeLists.txt  SuperTrunfo.c  SuperTrunfo_Intermediario.c
Nivel_Avancado/: Super_Trunfo_Avancado.c
Nivel_Basico/: SuperTrunfo.c
Nivel_Intermediario/: Super_Trunfo_Intermediario.c
